--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /***** NAVBAR *****/
 .navbar-default {
-  background-color: black;
+  background-color: #337ab7;
   border-radius: 0;
   background-image: none;
 }
@@ -17,7 +17,7 @@
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: #ebd122;
+    color: yellow;
 }
 
 /* Navbar links */
@@ -60,7 +60,7 @@ a {
 }
 
 a:hover {
-  color: #ebd122;
+  color: yellow;
 }
 
 .jumbotron {
@@ -89,14 +89,23 @@ h4 {
    	text-align: center;
 
 }
+#cont {
+	position: absolute;
+}
+
+#panel {
+	
+	box-shadow: 0 0 15px rgba(0,0,0,0.9);
+	padding: 10px;
+	border-radius: 12px;
+	text-align: center;
+}
+
 .panel-title {
 	font-size: 20px;
 }
 
-}
-.panel-group {
-	align: left;
-}
+
 
 
 #map{
@@ -112,13 +121,9 @@ h4 {
 	text-align: center;
 }
 
-.btn-success:active {
-background-color: white;
-	box-shadow: 0 0 15px rgba(0,0,0,0.9);
-	padding: 10px;
-	border-radius: 12px;
-	text-align: center;
-}
+
+
+
 
 
 
