--- a/css/style.css
+++ b/css/style.css
@@ -105,13 +105,18 @@ h4 {
 	font-size: 20px;
 }
 
-
+position: relative;
+	left: 10%;
+	border: 1px solid #999;
+	box-shadow: 2px 2px 4px #999;
+	padding: 5px;
 
 
 #map{
     width: 100%; 
     height: 100%;
 	margin: auto;
+}
 
 .leaflet-popup-content {
 	background-color: white;
@@ -121,7 +126,73 @@ h4 {
 	text-align: center;
 }
 
+.map {
+	position: relative;
+	
+	
+}
 
+.NAcountries {
+	fill: white;
+	stroke: #CCC;
+	stroke-width: 2px;
+}
+
+.regions {
+	stroke: #000;
+	stroke-width: 0.5px;
+	stroke-linecap: round;
+}
+
+.gratBackground {
+   
+    	fill: none;
+	opacity: .50;
+
+}
+
+.gratLines {
+	fill: none;
+	stroke: #999;
+	stroke-width: 0px;
+}
+
+
+
+.dropdown {
+	position: absolute;
+	top: 150px;
+	left: 400px;
+	z-index: 10;
+	font-family: sans-serif;
+	font-size: 1em;
+	font-weight: bold;
+	padding: 2px;
+	border: 1px solid #999;
+	box-shadow: 2px 2px 4px #999;
+}
+
+option {
+	font-weight: normal;
+}
+
+.infolabel {
+	position: absolute;
+	height: 60px;
+	min-width: 100px;
+	color: #fff;
+	background-color: #000;
+	border: solid thin #fff;
+	padding: 0px 10px;
+	top: -75px;
+}
+
+.infolabel h1 {
+	margin: 0 20px 0 0;
+	padding: 0;
+	display: inline-block;
+	line-height: 1em;
+}
 
 
 
